feat(api): Move to embedPDF's fork, expose more basic PDFIum methods, improve redaction (#4)
* feat: standardize comments and add new classes for PDF processing

* feat(redaction): enhance content redaction to support all object types and improve handling of paths and forms

* feat(build): update build process to compile PDFium from EmbedPDF fork source

* feat: standardize rotation terminology and enhance native library extraction process